cloudkart-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudkart-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: cloudkart.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
